# docs/swagger.json
@@ -100,6 +100,29 @@
                 }
             }
         },
+        "/api/user/check": {
+            "get": {
+                "description": "Проверяет валидность токена и возвращает данные пользователя",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AUTH"
+                ],
+                "summary": "Проверка авторизации",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "401": {
+                        "description": "ошибка",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/delete/{id}": {
             "delete": {
                 "description": "Пользователя удаляют из системы по ID. Хендлер принимает ID,\nи с его помощью находит пользователя в базе данных и удаляет его из нее",
@@ -337,8 +360,7 @@
             "required": [
                 "confirm_pass",
                 "old_password",
-                "password",
-                "updated_at"
+                "password"
             ],
             "properties": {
                 "confirm_pass": {
@@ -352,9 +374,6 @@
                 "password": {
                     "description": "новый пароль\nПоле обязательно",
                     "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
                 }
             }
         },
@@ -362,8 +381,7 @@
             "type": "object",
             "required": [
                 "date_of_birth",
-                "name",
-                "updated_at"
+                "name"
             ],
             "properties": {
                 "date_of_birth": {
@@ -372,9 +390,6 @@
                 },
                 "name": {
                     "description": "имя пользователя\nПоле обязательно",
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
